2013-09-09  Dean Jackson  <dino@apple.com>

        [WebGL] Allow multithreaded OpenGL contexts
        https://bugs.webkit.org/show_bug.cgi?id=121062

        Reviewed by Simon Fraser.

        Expose a new preference "multithreadedWebGLEnabled".

        * Shared/WebPreferencesStore.h:
        * UIProcess/API/C/WKPreferences.cpp:
        (WKPreferencesSetMultithreadedWebGLEnabled):
        (WKPreferencesGetMultithreadedWebGLEnabled):
        * UIProcess/API/C/WKPreferencesPrivate.h:
        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::updatePreferences):
        * mac/WebKit2.order:

2013-09-09  Dean Jackson  <dino@apple.com>

        Enable WebGL for OS X nightlies
        https://bugs.webkit.org/show_bug.cgi?id=121040

        Reviewed by Beth Dakin.

        * Shared/WebPreferencesStore.h: Set initial value to true.

2013-09-08  Anders Carlsson  <andersca@apple.com>

        Begin moving off of TypeTraits.h
        https://bugs.webkit.org/show_bug.cgi?id=121006

        Reviewed by Darin Adler.

        Convert uses of WTF type traits to STL type traits.

        * Platform/CoreIPC/ArgumentCoder.h:
        * Platform/CoreIPC/ArgumentCoders.h:
        * Platform/CoreIPC/ArgumentDecoder.h:
        * Platform/CoreIPC/ArgumentEncoder.h:
        * Platform/CoreIPC/Arguments.h:
        * Shared/API/c/WKSharedAPICast.h:
        (WebKit::toImpl):

2013-09-09  Gustavo Noronha Silva  <gns@gnome.org>

        Unreviewed build fix.

        * GNUmakefile.list.am: Typo - left-over \ from a copy/paste, most likely.

2013-09-09  Anton Obzhirov  <a.obzhirov@samsung.com>

        [GTK] Cancel the current active WebKitAuthenticationRequest on load failed
        https://bugs.webkit.org/show_bug.cgi?id=120350

        Reviewed by Carlos Garcia Campos.

        The default dialog does not get closed and the authentication is not cancelled
        if loading fails or is stopped on a page which requires HTTP authentication.
